<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginTop="@dimen/size10dp"
            android:text="@string/tv_dk_candientatcacacmuc"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edHoTenDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp">

            <EditText
                android:id="@+id/edHoTenDK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_HoTenDK"
                android:textColor="@color/colorBlack"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edDiaChiEmailDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp">

            <EditText
                android:id="@+id/edDiaChiEmailDK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_DiachiEmailDK"
                android:textColor="@color/colorBlack"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp">

            <com.example.toan.applazada.CustomView.PasswordEditText
                android:id="@+id/edMatKhauDK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_MatKhauDK"
                app:useTrike="true"
                app:useValidate="true"
                android:textColor="@color/colorBlack"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:text="@string/tv_dk_matkhau6kitu" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_edNhapLaiMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp">

            <com.example.toan.applazada.CustomView.PasswordEditText
                android:id="@+id/edNhapLaiMatKhauDK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_NhapLaiMatKhauDK"
                android:textColor="@color/colorBlack"
                app:useTrike="true"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sEmailDocQuyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:checked="true"
            android:text="@string/switch_dk" />
        <Button
            android:id="@+id/btnDangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:text="@string/btn_Dangky"
            android:background="@color/bgLogo"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_dk_dieukhoanbaomat"
            android:layout_margin="@dimen/size10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size10dp"
            android:gravity="center"
            android:text="Hoặc đăng ký bằng" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDangNhapFacebookDK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:background="@drawable/vienfacebook"
                android:drawableLeft="@drawable/facebookiconsmall"
                android:text="Facebook"
                android:textAllCaps="false"
                android:textColor="@color/colorFacebook"

                />

            <Button
                android:id="@+id/btnDangNhapGoogleDK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size10dp"
                android:layout_weight="1"
                android:background="@drawable/viengoogle"
                android:drawableLeft="@drawable/googleplussmall"
                android:text="Google +"
                android:textAllCaps="false"
                android:textColor="@color/colorGoogle" />

        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

