<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundplashscreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:orientation="vertical"
        android:paddingLeft="@dimen/flashScreen_paddingLeft"
        android:paddingRight="@dimen/flashScreen_paddingRight"
        android:paddingTop="@dimen/flashScreen_paddingTop">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/flashScreen_imageview_paddingTop"
            android:src="@drawable/iconbag"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashScreen_txtThegioimuasam"
            android:textColor="#FFF"
            android:textSize="@dimen/flashScreen_textSize"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/flashScreen_imageview_paddingTop"
            android:src="@drawable/iconsercurity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashScreen_txt100Baovenguoidung"
            android:textColor="#FFF"
            android:textSize="@dimen/flashScreen_textSize"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="@dimen/flashScreen_imageview_paddingTop"
            android:src="@drawable/iconmoney"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashScreen_txtGiaohangtannoi"
            android:textColor="#FFF"
            android:textSize="@dimen/flashScreen_textSize"
            android:textAlignment="center"
            />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lazadacustomerlogo"
        android:layout_gravity="bottom|center"
        />
</FrameLayout>